--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../header', {session: session}); %>
 
 <div class="pure-u-1 login">
-  <form method="post" action="/users/" class="pure-form pure-form-aligned">
+  <form method="post" action="/users" class="pure-form pure-form-aligned">
     <fieldset>
       <legend>New User</legend>
       <div class="pure-control-group">
